# Gra2d

./: CMakeLists.txt  GameSettings.ini  Gra2d  main.cpp
Animation/: Animation.cpp  Animation.h
Entity/: Entity.cpp  Entity.h
Entity/Enemy/: Enemy.cpp  Enemy.h
Entity/Items/: Items.cpp  Items.h
Entity/Player/: Player.cpp  Player.h
GUI/: Button.h
GameData/: GameStateData.h
GameEngine/: GameEngine.cpp  GameEngine.h
States/: GameState.cpp  GameState.h  LoseState.cpp  LoseState.h  MenuState.cpp  MenuState.h  OptionState.cpp  OptionState.h  PauseState.cpp  PauseState.h  State.h  winState.cpp  winState.h
TileMap/: Tile.cpp  Tile.h  TileMap.cpp  TileMap.h
